main/production/namespaces/frontend/fundhub-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fundhub-client
spec:
  selector:
    app: fundhub-client
  ports:
    - port: 80
      targetPort: 3010
