main/production/namespaces/frontend/fundhub-client/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fundhub-client-svc-destinationrule
spec:
  host: fundhub-client-svc.frontend.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
